# StyleStack

./: .coverage_data.db  .coveragerc  .gitignore  ADVANCED_OOXML_COLOR_THEMES_RESEARCH.md  BRANDWARES_SUPERTHEMES_RESEARCH.md  CLAUDE.md  E2E_NAMESPACE_FIX_SPECIFICATION.md  Makefile  OOXML Formatting and Layout Features (ECMA-376).docx  README.md  STYLESTACK_DEPENDENCY_ANALYSIS.json  SUPERTHEME_IMPLEMENTATION_STRATEGY.md  [Content_Types].xml  analysis_multi_format_handler_elimination.md  analysis_results.md  analyze_document_types.py  analyze_imports.py  batch_template.json  build.py  cleanup_imports.py  conftest.py  consolidation_completion_status.md  consolidation_methodology.md  consolidation_risk_matrix.md  consolidation_success_criteria.md  consolidation_target_architectures.json  consolidation_target_mapping.md  content.xml  create_primitive_exemplars.py  debug_corruption.py  debug_inheritance_test.py  debug_namespace_issue.py  demo-acme-present.potx  dependency_analysis_report.py  enhanced_main.py  fix_quote_styles.py  meta.xml  phantom_dependency_analysis.md  pyproject.toml  pytest-parallel.ini  (+19 more)
_reports/: ARCHITECTURE_OPTIMIZATIONS.md  BATCHING_OPTIMIZATION_ANALYSIS.md  CODEBASE_ANALYSIS.md  CODEBASE_INDEX.md  CORRUPTION_ROOT_CAUSE_ANALYSIS.md  DEPENDENCY_VISUALIZATION.md  IMPORT_FIX_SPEC.md  IMPORT_ISSUES_FINAL_ANALYSIS.md  IMPORT_PATH_SETUP.md  SUPERTHEME_ANALYSIS_REPORT.md  SUPERTHEME_SAMPLE_ANALYSIS_REQUEST.md  TASK_2_COMPLETION_REPORT.md  TASK_3_COMPLETION_REPORT.md  TASK_4_COMPLETION_REPORT.md  TEMPLATE_CORRUPTION_DIAGNOSIS.md  TEST_RESULTS_AND_ANALYSIS.md  coverage_report.md  import_analysis.json  missing_primitives_audit.md  performance_report.json  project_structure_validation_report.json  tasks.md  test_cleanup_analysis.json  test_failures_specification.md  unused_methods_analysis.json
baseline-templates/: google-slides-exemplar.json  minimal-excel-a4-worksheet.xml  minimal-word-a4-document.xml  smartart-definition.xml
channels/: doc.json  doc.yaml  finance.json  finance.yaml  present.json  present.yaml
config/: enhanced_orphaned_code_report.json  grid-system-parametric.json  grid-system-parametric.yaml  grid-system.json  grid-system.yaml  orphaned_code_report.json  orphaned_code_safety_results.json  stylestack_e2e_architecture_report.json  unused_methods_analysis.json
core/: 2026-MANIFEST.md  README.md  dimensions-a4.json  dimensions-a4.yaml  grid-system-a4.json  grid-system-a4.yaml  openoffice-ooxml-mapping.json  openoffice-ooxml-mapping.yaml  patches-typography.json  patches-typography.yaml  theme-colors.json  theme-colors.yaml  typography-modern.json  typography-modern.yaml
data/: powerpoint-layouts.json
docProps/: app.xml  core.xml
docs/: 2026-DESIGN-PRINCIPLES.md  ADVANCED_TOKEN_COVERAGE_REPORT.md  API_REFERENCE.md  BACKLOG_REORGANIZATION_SUMMARY.md  COMPREHENSIVE_ORPHANED_CODE_ANALYSIS.md  CORE_MODULE_CLEANUP_RESULTS.md  DEPENDENCY_GRAPH_ANALYSIS.md  DEPENDENCY_MAP_SPECIFICATION.md  FINAL_ORPHANED_CODE_ANALYSIS.md  IMMEDIATE_ROADMAP.md  IMPORT_ISSUES_ANALYSIS.md  IMPORT_ISSUES_REPAIR_TASKS.md  ORPHANED_CODE_ANALYSIS_SUMMARY.md  PHASE_1_SUCCESS_PATTERNS.md  PRODUCT_BACKLOG.md  SETUP_GUIDE.md  SYSTEMATIC_IMPORT_REPAIR_PROJECT_FINAL_REPORT.md  TASK_1_COMPLETION_REPORT.md  advanced-indesign-level-ooxml-layout.md  base_template_structure.md  critical_ooxml_carriers.md  design-token-ooxml-mapping.md  direct-ooxml-typography-grid-editing.md  emu-typography-grid-system.md  odf-carriers-advanced.md  odf-carriers-comprehensive.md  ooxml-carriers-comprehensive.md  ooxml-formatting-layout-ecma376.md  ooxml-kerning-advanced-typography.md  ooxml-primitives-excel.md  ooxml-primitives-powerpoint.md  ooxml-primitives-word.md  ooxml-shape-typography-layout-control.md  ooxml-table-complete-layout-styling-system.md  ooxml-table-typography-advanced-layout.md  overlooked_ooxml_carriers.md  test_consolidation_strategy_recap.md
docusaurus/: docusaurus.config.js  package.json  sidebars.js
examples/: style_inheritance_demo.py  typography_tokens_demo.py
exemplars/: PRIMITIVE_EXEMPLARS.md  excel_primitives_demo.xltx  powerpoint_primitives_demo.potx  word_primitives_demo.dotx
extract/: .gitkeep  README.md  WORKFLOW_EXAMPLES.md  test.txt
ooxml-roundtrip-tester/: .gitignore  README.md  requirements.txt  setup.py
reports/: code_archival_analysis.txt  duplicate_code_analysis.txt  templating_comment_analysis.txt
schemas/: aspect-ratio-token.schema.json  channel-config.schema.json  design-tokens.schema.json  enhanced-token.schema.json  extension-variable.schema.json  extension-variable.schema.yaml  org-patch.schema.json  powerpoint-layout-schema.json
scripts/: analyze_archival_candidates.py  analyze_coverage.py  analyze_templating_comments.py  check_duplicates.py  cleanup_test_methods.py  create_primitive_exemplars.py  debug_corruption.py  dependency_graph_visualization.py  fix_docstring_imports.py  fix_typing_imports.py  identify_unused_methods.py  import_optimizer.py  improved_orphaned_code_analyzer.py  orphaned_code_analyzer.py  orphaned_code_safety_test.py  test_actual_corruption.py  test_cleanup_analyzer.py
tests/: __init__.py  generate_test_structure.py  test_advanced_cache_system_comprehensive.py  test_advanced_fixture_system.py  test_advanced_namespace_handling.py  test_advanced_token_e2e.py  (+109 more)
(+554 files in other folders)
